# airflow-operator

./: .gitignore  Dockerfile  Makefile  PROJECT  pyproject.toml  watches.yaml
config/crd/: kustomization.yaml
config/crd/bases/: datahub.deliveryhero.net_airflows.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/manager/: manager.yaml
config/manifests/: kustomization.yaml
config/prometheus/: monitor.yaml
config/rbac/: airflow_editor_role.yaml  airflow_viewer_role.yaml  auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: datahub_v1alpha1_airflow.yaml  kustomization.yaml
config/testing/: kustomization.yaml
molecule/default/: molecule.yml
molecule/default/tasks/: airflow_test.yml
molecule/kind/: molecule.yml
roles/airflow/defaults/: main.yml
roles/airflow/handlers/: main.yml
roles/airflow/tasks/: main.yml
roles/airflow/vars/: main.yml
